# recipe2txt

./: .gitignore  .mypy.ini  Makefile  README.md  asynctestoutput.txt  asynctestoutput2.txt  markdown.py  md-test.py  noxfile.py  pyproject.toml  re2txt.py  requirements.txt  requirements_performance.txt  rezepte.py  timer.py
recipe2txt/: argparse.py  fetcher.py  fetcher_abstract.py  fetcher_async.py  fetcher_serial.py  file_setup.py  html2recipe.py  main.py  parsing_error.py  re2txt.py  recipes2out.py  rezepte.py  sql.py  user_interface.py
recipe2txt/resources/templates/: LICENSE  md.jinja  txt.jinja
recipe2txt/utils/: ArgConfig.py  ContextLogger.py  conditional_imports.py  filesystem.py  markdown.py  misc.py  timer.py  traceback_utils.py
test/: test4recipe2txt.py  test_argconfig.py  test_contextlogger.py  test_fetcher.py  test_file_setup.py  test_filestystem.py  test_helpers.py  test_html2recipe.py  test_misc.py  test_recipes2out.py  test_sql.py  test_timer.py  test_traceback_utils.py
test/testfiles/: one_tab_link_prepper.py  urls2.txt  urls3.txt  urls4.txt  urls5.txt
test/testfiles/data/: default_output_location.txt
test/testfiles/debug-dirs/config/: default_output_location.txt
test/testfiles/html2recipe/: LICENSE  URLs  testfile_generator.py
test/testfiles/html2recipe/html/: Arroz_con_Pollo.html  Asian_Chicken_Salad.html  Au_Jus_Sandwich.html  Borscht.html  FAIL_cc_4_0.html
test/testfiles/html2recipe/md/: Arroz_con_Pollo.md  Asian_Chicken_Salad.md  Au_Jus_Sandwich.md  Borscht.md
test/testfiles/html2recipe/parsed/: Arroz_con_Pollo.parsed  Asian_Chicken_Salad.parsed  Au_Jus_Sandwich.parsed  Borscht.parsed
test/testfiles/html2recipe/txt/: Arroz_con_Pollo.txt  Asian_Chicken_Salad.txt  Au_Jus_Sandwich.txt  Borscht.txt
test/testfiles/permanent/: -7_-29_23_37.txt  LICENSE  all_urls.txt  gen_log.py  gen_stack.py  obscured_urls.txt  testfile_generator.py  unobscured_urls.txt
test/testfiles/permanent/html/: Arroz_con_Pollo.html  Asian_Chicken_Salad.html  Au_Jus_Sandwich.html  Borscht.html  FAIL_RECIPE.html
test/testfiles/permanent/logfiles/: critical  debug  error  info  warning
test/testfiles/permanent/md/: Asian_Chicken_Salad.md  Au_Jus_Sandwich.md  Borscht.md  recipes.md
test/testfiles/permanent/parsed/: Arroz_con_Pollo.parsed  Asian_Chicken_Salad.parsed  Au_Jus_Sandwich.parsed  Borscht.parsed
test/testfiles/permanent/traces/: -7_-29_23_37.txt
test/testfiles/permanent/txt/: Arroz_con_Pollo.txt  Asian_Chicken_Salad.txt  Au_Jus_Sandwich.txt  Borscht.txt  recipes.txt
testfiles/: urls.txt
tests/: test_misc.py
tests/testfiles/: one_tab_link_prepper.py
tests/testfiles/data/: default_output_location.txt
