[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "recipe2txt"
version = "0.1.1"
authors = [
  { name="Jan Philipp Berg", email="git.7ksst@aleeas.com" },
]
description = "Scrapes recipes and converts them to txt or markdown"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GNU General Public License v3 or later (GPLv3+)"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: aiohttp",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed"
]
keywords = ["recipes", "cooking", "scraping", "website"]
dependencies = [
  "recipe-scrapers ~= 14.39",
  "xdg-base-dirs ~= 6.0",
  "validators ~= 0.20",
  "importlib-metadata ~= 6.8",
  "backports.strenum ~= 1.2; python_version < '3.11'",
  "typing_extensions ~= 4.6.2; python_version < '3.11'"
]

[project.optional-dependencies]
performance = ["aiohttp ~= 3.8", "aiodns ~= 3.0"]

[project.urls]
"Homepage" = "https://github.com/jp-berg/recipe2txt"
"Bug Tracker" = "https://github.com/jp-berg/recipe2txt/issues"

[project.scripts]
re2txt = "recipe2txt.re2txt:main"
recipe2txt = "recipe2txt.re2txt:main"
